@@ -14,8 +14,8 @@
     "require": {
         "php": ">=7.0",
         "psr/log": "^1.0",
-        "simplecomplex/utils": "^1.7.2 || dev-develop",
-        "simplecomplex/validate": "^2.0 || dev-develop"
+        "simplecomplex/utils": "^1.8 || dev-develop",
+        "simplecomplex/validate": "^2.1 || dev-develop"
     },
     "suggest": {
         "ext-mysqli": "PHP MySQLi extension is required when using MySQL/MariaDB databases.",
